fix font, fix scrollbar, fix footer

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -32,6 +32,8 @@
 }
 
 .app {
+    display: flex;
+    flex-direction: column;
     position: absolute;
     width: 100%;
     height: 100%;
