--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,6 +1,6 @@
 @import url("https://accrazed.github.io/YoRHA-UI-BetterDiscord/font/stylesheet.css");
 
-$font: "SCE PS3 Rodin Latin";
+$font: "sce-ps3_rodin_latinregular";
 $high: #dad4bb;
 $mid: #979381;
 $low: #57544a;
