--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,19 @@
 
     overflow-y: scroll;
     height: 85vh;
+
+    &::-webkit-scrollbar {
+        background-color: transparent;
+        width: 7px;
+        height: 7px;
+        &-track,
+        &-corner {
+            background-color: transparent;
+        }
+        &-thumb {
+            background-color: $low;
+        }
+    }
 }
 
 .container {
@@ -40,6 +53,10 @@
     padding-left: 3rem;
     margin-bottom: 1rem;
     height: fit-content;
+
+    p {
+        margin: 0.5rem 0 1rem;
+    }
 
     width: 56vw;
     @media screen and (min-width: 400px) {
